--- a/sass/molecules/_site-header.scss
+++ b/sass/molecules/_site-header.scss
@@ -42,7 +42,7 @@ $animation-duration: 30s;
             background: transparent url('images/marsha-riti.svg') no-repeat;
             @include background-size(100%);
             width: 210px;
-            height: 120px;
+            height: 124px;
             margin: 2rem auto;
             opacity: 0.7;
         }
